--- a/ffdhtml.html
+++ b/ffdhtml.html
@@ -57,14 +57,11 @@
 			<h1 style="color:white;background-color:black">Forest Fire Detection</h1>
 			<div class="txt-container">
 				<p>
-					This system which is specifically developed to predict whether a forestfire has occured in the forest.
-					It provides digital information of the forest whether it is safe or not.
-					Forest fires are a major environmental issue, creating economic and ecological damage while endangering human
-					lives. There are typically about 100,000 wildfires in the United States every year. Over 9 million acres
-					of land have been destroyed due to treacherous wildfires. It is difficult to predict and detect Forest
-					Fire in a sparsely populated forest area and it is more difficult if the prediction is done using ground
-					based methods like Camera or Video Based approach. Satellites can be an important source of data prior to
-					and also during the Fire due to its reliability and efficiency.
+					Forest fires are a major environmental issue, creating economic and ecological damage while endangering animal lives. 
+					It is difficult to predict and detect Forest Fire in a sparsely populated forest area and it is more difficult if the prediction is 
+					done using ground based methods like Camera or Video Based approach. Satellites or drones can be an important source of data prior to and also during 
+					the Fire due to its reliability and efficiency. This project detects fire, if implemented with the right hardware, this project can significantly help 
+					in detecting forest fire in time. Click on start streaming and it sends a mail to the user if fire is detected
 				</p>
 			</div><br/><br/>
 			<form action="/predict" id="details" method="post">
