--- a/ffdhtml.html
+++ b/ffdhtml.html
@@ -58,10 +58,10 @@
 			<div class="txt-container">
 				<p>
 					Forest fires are a major environmental issue, creating economic and ecological damage while endangering animal lives. 
-					It is difficult to predict and detect Forest Fire in a sparsely populated forest area and it is more difficult if the prediction is 
-					done using ground based methods like Camera or Video Based approach. Satellites or drones can be an important source of data prior to and also during 
-					the Fire due to its reliability and efficiency. This project detects fire, if implemented with the right hardware, this project can significantly help 
-					in detecting forest fire in time. Click on start streaming and it sends a mail to the user if fire is detected
+					It is difficult to predict and detect Forest Fire in a sparsely populated forest area and it is more difficult if the prediction
+					is done using ground based methods like camera or video based approach. Satellites or drones can be an important source of data prior 
+					to and also during the fire due to their reliability and efficiency. This project detects fire, if implemented with the right hardware, 
+					this can significantly help in saving time during a forest fire.  Click on start streaming and it sends a mail to the user if fire is detected.
 				</p>
 			</div><br/><br/>
 			<form action="/predict" id="details" method="post">
